# HumbugEngine

./: .gitignore  CMakeLists.txt  README.md
assets/animations/: jellyfishanim.heas  test.heas
assets/shaders/: texture.frag  texture.vert  texture_array.frag  texture_array.vert  texture_old.frag  texture_old.vert  user_interface.frag  user_interface.vert
assets/uipatterns/: footer.heui  logo.heui  test.heui
include/HumbugEngine/: Animation.h  AnimationKey.h  Animator.h  AudioListener.h  AudioMaster.h  AudioSource.h  BallPhysic.h  Camera.h  Collider.h  DirLight.h  Engine.h  Entity.h  EventListener.h  EventNotifier.h  Floorplan.h  FrameBuffer.h  FreeCamera.h  Function.h  GameHeader.h  Ground.h  House.h  Level1.h  Level2.h  Level3.h  Level4.h  Level5.h  Level6.h  Light.h  Lighting.h  Material.h  Mesh.h  Object.h  PhysicRuleset.h  Physical.h  Pillar.h  PillarRoom.h  Playable.h  Player.h  PointLight.h  Portal.h  (+10 more)
include/HumbugEngine/Components/: Camera.h  Collider.h  Component.h  DirLight.h  FrameBuffer.h  Light.h  MeshRenderer.h  PointLight.h  ShaderRenderer.h  TextureRenderer.h
include/HumbugEngine/Core/: Engine.h  Lighting.h  Scene.h  Sky.h
include/HumbugEngine/Objects/: LightObject.h  Object.h  Player.h  Portal.h
include/HumbugEngine/Physics/: BallPhysic.h  Entity.h  PhysicRuleset.h  Physical.h  Playable.h
include/HumbugEngine/Ressources/: Material.h  Mesh.h  Ressource.h  Shader.h  Sphere.h  Texture.h
include/HumbugEngine/Ressources/Levels/: Level_1.h
include/HumbugEngine/Ressources/Objects/: Armoire.h  Car.h  Cat.h  Church.h  JellyFish.h  Plant.h  TestObj.h
include/HumbugEngine/Ressources/Objects/MazeRoom/: Maze.h  MazeRoom.h
include/HumbugEngine/Utils/: Resources.h
src/: Animation.cpp  AnimationKey.cpp  Animator.cpp  AudioListener.cpp  AudioMaster.cpp  AudioSource.cpp  BallPhysic.cpp  Camera.cpp  Collider.cpp  DirLight.cpp  Engine.cpp  Entity.cpp  EventNotifier.cpp  FrameBuffer.cpp  FreeCamera.cpp  Function.cpp  Input.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Level4.cpp  Level5.cpp  Level6.cpp  Level_1.cpp  Light.cpp  LightObject.cpp  Lighting.cpp  Main.cpp  Maze.cpp  Mesh.cpp  MeshRenderer.cpp  Object.cpp  Physical.cpp  Playable.cpp  Player.cpp  PointLight.cpp  Portal.cpp  Resources.cpp  Scene.cpp  Sequence.cpp  (+4 more)
src/Components/: Camera.cpp  Component.cpp  FrameBuffer.cpp  MeshRenderer.cpp  PointLight.cpp  ShaderRenderer.cpp  TextureRenderer.cpp
src/Core/: Engine.cpp  Input.cpp  Lighting.cpp
src/Objects/: LightObject.cpp  Object.cpp  Player.cpp  Portal.cpp
src/Physics/: Entity.cpp  Physical.cpp
src/Ressources/: Mesh.cpp  Ressource.cpp  Shader.cpp  Texture.cpp
